SERVER-8284 Turn off access warning during index rebuilds